test/libsolidity/syntaxTests/pragma/invalid_range_conjunction_range_first.sol
pragma solidity 0.4.1 - 0.6.2 0.8.17;
// ----
// ParserError 1684: (0-37): Invalid version pragma. You can only combine version ranges using the || operator.
